# azure-ai-search-deepdive

./: .gitignore  AGENTS.md  CONTEXT.md  NOTEBOOK_EXECUTION_LOG.md  PLAN.md  README.md  REPORT.md  deployments.json  fix_notebook.py  multi-modal-report.md  policy_update.json  pyproject.toml  rai_policies.json  report.md  requirements.txt  run_nb.py  sample.env  update_notebook.py
.github/: copilot-instructions.md
crawl-function/: function_app.py  local.settings.json.example  precedent_crawler.py  requirements.txt
docs/: architecture-korea.drawio  architecture-sweden.drawio  architecture.drawio  infrastructure.md
infra/: COMPLETION-SUMMARY.md  DEPLOYMENT.md  main.bicep  main.json
logic-apps/: connections.json  deploy_workflow.py
notebooks/: 01-infra-deployment.ipynb  02-data-crawling.ipynb  03-indexing.ipynb  03-search-and-query.ipynb  04-legal-multi-index.ipynb  04-search-and-query.ipynb  05-multi-index-search.ipynb  05-multimodal-indexing.ipynb  06-multimodal-search.ipynb  07-content-understanding.ipynb  REPORT.md  REPORT_CACHE.md  cache_experiment_results.json  multi-modal-report-v7.md
scripts/: bundle_seed_data.py  prepare_multimodal_raw_dataset.py  reindex_all.py  reindex_with_metrics.py  run_all_cache_experiments.py  run_cache_experiment.py  run_multimodal_cache_experiment.py  sample_zip_to_blob.py  seed_raw_documents.py  setup_ai_search_multimodal_pipeline.py  setup_ai_search_pipeline.py  upload_multimodal_data.sh  verify_crawl_preprocess.py
skills-function/: .funcignore  function_app.py  host.json  local.settings.json.example  requirements.txt
(+170 files in other folders)
