[project]
name = "azure-rag-indexing-lab"
version = "0.1.0"
description = "Hands-on Lab: Data Crawling → Logic Apps Preprocessing → Azure AI Search RAG Indexing Pipeline"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "azure-storage-blob>=12.19.0",
    "azure-identity>=1.15.0",
    "azure-search-documents>=11.6.0b8",
    "azure-ai-documentintelligence>=1.0.0",
    "openai>=1.12.0",
    "python-dotenv>=1.0.0",
    "azure-mgmt-resource>=23.0.0",
    "azure-mgmt-logic>=10.0.0",
    "ipykernel>=6.29.0",
    # Azure AI Foundry Agent Service (Scenario E in notebook 04)
    "azure-ai-projects>=1.0.0b10",
    "azure-ai-agents>=1.0.0b3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 120
